--- a/Modal Window/style.css
+++ b/Modal Window/style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;500&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -16,41 +19,121 @@
     height: 100vh;
     position: relative;
     display: flex;
-    align-items: flex-start;
+    align-items: center;
     justify-content: center;
     background: linear-gradient(to top left, #28b487, #7dd56f);
   }
+
+  .mainHeading {
+    font-size: 85px;
+    background-color: white;
+    color: black;
+    border: 15px inset rgb(249, 237, 12);
+    border-radius: 15px;
+    padding: 12px;
+  }
+
+  button:hover {
+    background-color: black;
+    color: white;
+  }
+
+  .container {
+    text-align: center;
+    flex-direction: column;
+  }
+
+  .insideContainer {
+    text-align: center;
+    flex-direction: column;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   
+  .emailInput-Container {
+    margin-top: 35px;
+  }
+
+  .passwordInput-Container {
+    margin-top: 45px;
+  }
+  
+  .modalHeading {
+    font-family: 'Roboto Slab', serif;
+    font-size: 45px !important;
+    margin-top: 24px;
+    border: px ridge black;
+    padding: 4.5px;
+    border-radius: 10px;
+  }
+  
+  #BtnSignUp {
+    width: 155px;
+    height: 80px;
+    font-size: x-large;
+    color: white;
+    background-color: blue;
+    border: none;
+    border-radius: 12px;
+    margin-top: 40px
+  }
+
+  #BtnSignUp:hover {
+    color: white;
+    background-color: purple;
+    border: 8px outset purple;
+  }
+  
+  /* ... Rest of your CSS ... */
+  
+
   .show-modal {
-    font-size: 2rem;
+    height: 150px;
+    width: 250px;
+    font-size: 40px;
     font-weight: 600;
     padding: 1.75rem 3.5rem;
     margin: 5rem 2rem;
     border: none;
     background-color: #fff;
     color: #444;
-    border-radius: 10rem;
+    border-radius: 5rem;
     cursor: pointer;
   }
   
   .close-modal {
     position: absolute;
-    top: 1.2rem;
-    right: 2rem;
-    font-size: 5rem;
+    top: 2rem;
+    right: 3rem;
+    font-size: 7rem;
     color: #333;
     cursor: pointer;
     border: none;
     background: none;
   }
-  
-  h1 {
-    font-size: 2.5rem;
-    margin-bottom: 2rem;
+
+  .close-modal:hover {
+    color: red;
+    background-color: white;
   }
   
   p {
     font-size: 1.8rem;
+  }
+
+  h2 {
+    font-size: large;
+  }
+
+  #emailInput, #passwordInput {
+    width: 300px;
+    height: 55px;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 9px;
+    font-size: large;
   }
   
   /* -------------------------- */
@@ -59,16 +142,24 @@
     display: none;
   }
   
+  .modalHeading {
+    font-size: 2.5rem;
+    margin-bottom: 2rem;
+  }
+
   .modal {
+    text-align: center; /* Center-align the content within the container */
+    flex-direction: column; /* Stack elements vertically within the container */
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 70%;
-  
+    width: 550px;
+    height: 600px;
+    border: none;
     background-color: white;
-    padding: 6rem;
-    border-radius: 5px;
+    padding: 5px;
+    border-radius: 35px;
     box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
     z-index: 10;
   }
@@ -82,4 +173,15 @@
     background-color: rgba(0, 0, 0, 0.6);
     backdrop-filter: blur(3px);
     z-index: 5;
+  }
+
+  #emailHeading, #passwordHeading {
+    font-size: x-large;
+    margin-bottom: 7px;
+  }
+
+  #signUp_Message {
+    margin-top: 255px;
+    font-size: x-large;
+    font-weight: bolder;
   }
