--- a/Modal Window/style.css
+++ b/Modal Window/style.css
@@ -69,7 +69,7 @@
     border-radius: 10px;
   }
   
-  #BtnSignUp {
+  #BtnSignUp, #BtnLogin {
     width: 155px;
     height: 80px;
     font-size: x-large;
@@ -80,7 +80,7 @@
     margin-top: 40px
   }
 
-  #BtnSignUp:hover {
+  #BtnSignUp:hover , #BtnLogin:hover{
     color: white;
     background-color: purple;
     border: 8px outset purple;
@@ -180,8 +180,8 @@
     margin-bottom: 7px;
   }
 
-  #signUp_Message {
-    margin-top: 255px;
-    font-size: x-large;
-    font-weight: bolder;
+  #signUp_Message, #login_Message {
+    margin-top: 235px;
+    font-size: xx-large;
+    font-weight: bold;
   }
