--- a/Modal Window/style.css
+++ b/Modal Window/style.css
@@ -196,19 +196,75 @@
   }
 
   .contactButtons {
-    margin-top: 25px;
+    margin-top: 12px;
   }
 
   #BtnSendMessage, #BtnClear {
     font-size: large;
+    font-weight: bold;
     margin: 10px;
     width: 170px;
-    height: 40px;
+    height: 50px;
     border-radius: 13px;
   }
 
   #BtnSendMessage:hover, #BtnClear:hover {
-    color: black;
-    background-color: gray;
-    border: 5px inset green;
+    color: white;
+    background-color: black;
+    border: 5px inset gray;
+  }
+
+  #nameInput, #emailInputContact{
+    width: 300px;
+    height: 45px;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 9px;
+    font-size: large;
+  }
+
+  #nameInput {
+    margin-bottom: 16px;
+  }
+
+  #messageInput {
+    width: 375px;
+    height: 200px;
+    border: 2px solid black;
+    border-radius: 20px;
+    padding: 9px;
+    font-size: large;
+    font-family: 'Roboto Slab', serif;
+    resize: none;
+  }
+
+  #closeContact {
+    position: absolute;
+    top: 3rem;
+    right: 3.2rem;
+    font-size: 7rem;
+    color: #333;
+    cursor: pointer;
+    border: none;
+    background: none;
+  }
+
+  #closeContact:hover {
+    background-color: white;
+    color: red;
+  }
+
+  .nameContainer {
+    margin-top: -10px !important;
+  }
+
+  #messageHeader_Contact {
+    font-size: 23px;
+    margin-top: 30px;
+    margin-bottom: 5.5px;
+  }
+
+  #nameHeader_Contact, #emailHeader_Contact {
+    font-size: 18px;
+    margin-bottom: 2px;
   }
